# setuppy

./: README.md  example.toml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: tests.yml
setuppy/: __init__.py  actions.py  cli.py  controller.py  facts.py  logger.py  recipe.py  types.py
setuppy/commands/: __init__.py  apt.py  base.py  brew.py  command.py  curl.py  github.py  stow.py  template.py  utils.py
tests/: test_apt.py  test_brew.py  test_command.py  test_command_utils.py  test_controller.py  test_curl.py  test_github.py  test_stow.py  test_template.py
