[project]
name = "setuppy"
description = "A simple setup system."
license = {file = "LICENSE"}
readme = "README.md"
authors = [{name = "Matthew W. Hoffman"}]
dynamic = ["version"]

requires-python = ">=3.11"
dependencies = [
  "click",
  "dataclass_binder",
]

[project.optional-dependencies]
dev = [
  "basedpyright",
  "coverage[toml]",
  "pytest",
  "pytest-cov",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "setuppy.__version__"}

[tool.pytest.ini_options]
testpaths = "tests"
pythonpath = "tests"
addopts = [
  "--cov=grax",
  "--import-mode=importlib",
  "--verbose",
]

[tool.coverage.run]
branch = true

[tool.pyright]
typeCheckingMode = "standard"
